# GarminLiveTrackBot

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: publish-docker.yml
garmin_livetrack/: logger.py  mail_listener.py  main.py  signal_bot.py
