[tool.poetry]
name = "garmin_livetrack"
version = "0.1.0"
description = ""
authors = ["Johannes <24914225+Johannes11833@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
imapclient = "^3.0.1"

# [tool.poetry.scripts]
# mkv-editor = "mkv_editor.run:cli"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
